--- a/src/assets/scss/_themes-vars.module.scss
+++ b/src/assets/scss/_themes-vars.module.scss
@@ -2,14 +2,14 @@
 $paper: #ffffff;
 
 // primary
-$primaryLight: #e3f2fd;
+$primaryLight: rgb(250,250,250);
 $primaryMain: #2196f3;
 $primaryDark: #1e88e5;
 $primary200: #90caf9;
 $primary800: #1565c0;
 
 // secondary
-$secondaryLight: #ede7f6;
+$secondaryLight: rgb(255,240,224);
 $secondaryMain: #673ab7;
 $secondaryDark: #fa8005;
 $secondary200: #b39ddb;
@@ -57,7 +57,7 @@ $darkLevel1: #29314f; // level 1
 $darkLevel2: #212946; // level 2
 
 // primary dark
-$darkPrimaryLight: #e3f2fd;
+$darkPrimaryLight: rgb(250,250,250);
 $darkPrimaryMain: #2196f3;
 $darkPrimaryDark: #1e88e5;
 $darkPrimary200: #90caf9;
